[package]
name = "accumulator-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ark-bls12-381 = "0.2"
ark-ec = { version = "0.2", features = ["parallel"] }
ark-ff = { version = "0.2", features = ["asm", "parallel"] }
ark-poly = { version = "0.2", features = ["parallel"] }
bincode = "1.3"
blake2b_simd = "0.5"
hex = "0.4"
sha2 = "0.10"
howlong = "0.1"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.6", features = ["serde"] }

# Local accumulator crate

acc = { path = "acc" }


