[package]
name = "accumulator_ads"
version = "0.1.0"
edition = "2021"


#[[bench]]
#name = "fixed_base_pow"
#harness = false

#[[bench]]
#name = "points_mul_sum"
#harness = false

#[[bench]]
#name = "dynamic_accumulator_benches"
#harness = false

[dependencies]
anyhow = "1.0"
ark-bls12-381 = "0.2"
ark-ec = { version = "0.2", features = ["parallel"] }
ark-ff = { version = "0.2", features = ["asm", "parallel"] }
ark-poly = { version = "0.2", features = ["parallel"] }
ark-serialize = "0.2"
blake2b_simd = "1.0"
hex = "0.4"
howlong = "0.1"
lazy_static = "1.4"
log = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
actix-rt = "1.1"
bincode = "1.3"
criterion = "0.3"
env_logger = "0.11"
rand = "0.7"
serde_json = "1.0"